# nix-modules

./: .gitignore  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/rfc/: 0001-centralized-nix-modules-and-bdd-testing.md
examples/: README.md
examples/basic-server/: README.md  configuration.nix  flake.nix  test-vm.nix
examples/bdd-test-setup/: README.md  configuration.nix  flake.nix
examples/bdd-test-setup/tests/features/: webserver.feature
examples/bdd-test-setup/tests/steps/: test_steps.py
examples/desktop-workstation/: README.md  configuration.nix  flake.nix  home.nix
examples/rust-microservice/: Cargo.toml  README.md  flake.nix
examples/rust-microservice/src/: main.rs
lib/: default.nix  health-checks.nix  helpers.nix  validators.nix
modules/: common-audio.nix  common-bgp.nix  common-certificates.nix  common-desktop.nix  common-dev-shell.nix  common-dhcp.nix  common-dns.nix  common-home.nix  common-log-aggregation.nix  common-monitoring.nix  common-oci-builder.nix  common-policy-routing.nix  common-rust-package.nix  common-rust-service.nix  common-secrets.nix  common-security.nix  common-system-services.nix  common-troubleshooting.nix  default.nix  rust-platform.nix
modules/health-monitoring/: default.nix  types.nix
modules/home-manager/: default.nix
overlays/: default.nix
testing/: flake.nix
